Aggiunge lo style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <!--Vue Js CDN-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!--Vue Js CDN-->
@@ -15,14 +16,21 @@
   </head>
   <body>
     <div id="app">
-      <ul>
-        <li v-for="disco in dischi">
-          <div class="cover"><img :src="disco.poster" /></div>
-          <h4>{{disco.title}}</h4>
-          <span>{{disco.author}}</span>
-          <h4>{{disco.year}}</h4>
-        </li>
-      </ul>
+      <header>
+        <img class="logo" src="./logo-small.svg" />
+      </header>
+      <section class="dischi">
+        <div class="container">
+          <ul class="card">
+            <li class="cards" v-for="disco in dischi">
+              <div><img class="cover" :src="disco.poster" /></div>
+              <h4>{{disco.title}}</h4>
+              <span>{{disco.author}}</span>
+              <h4>{{disco.year}}</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
     <script src="main.js"></script>
   </body>
